--- a/WpfApp1/WpfApp.csproj
+++ b/WpfApp1/WpfApp.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="PresentationTheme.Aero" Version="0.6.4" />
   </ItemGroup>
 
 </Project>
